--- a/templates/index.html
+++ b/templates/index.html
@@ -232,7 +232,7 @@
     <input type="email" id="email" name="email" placeholder="your@email.com" required>
 
     <label for="username">Username</label>
-    <input type="text" id="username" name="username" placeholder="Your username" required>
+    <input type="text" id="username" name="username" placeholder="Your username">
 
     <label for="password">Password</label>
     <input type="password" id="password" name="password" placeholder="Your password" required>
