--- a/templates/index.html
+++ b/templates/index.html
@@ -138,7 +138,9 @@
     }
 
     button:hover {
-      background-color: #1d4ed8;
+      background-color:rgb(27, 112, 51);
+      transform: translateY(-2px);
+
     }
 
     .table-wrapper {
@@ -186,8 +188,8 @@
     }
 
     .icon-btn img {
-      width: 24px;
-      height: 24px;
+      width: 20px;
+      height: 20px;
     }
 
     .update-btn {
