--- a/templates/update_notes.html
+++ b/templates/update_notes.html
@@ -59,15 +59,19 @@
 
         button:hover {
             background-color: rgb(60, 115, 63);
+            transform: translateY(-2px);
+
         }
 
         .btn-secondary {
-            background-color: #9e9e9e;
+            background-color:rgb(221, 11, 11);
             margin-left: 10px;
         }
 
         .btn-secondary:hover {
-            background-color: #7b7b7b;
+            background-color:rgb(177, 30, 30);
+            transform: translateY(-2px);
+
         }
 
         .btn-group {
